fix: replace ffmpeg library with ProcessBuilder to avoid dependency conflict
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>